--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
           <ul>
             <li class="album__item album__xsmall">
               <figure>
-                <div class="album__image" data-image-src="./static/images/button.png"
-                  style="padding-bottom:38.58520900321543%;">
+                <div class="album__image" data-image-src="./static/images/button.png" style="padding-bottom:50%;">
                   <div class="spin"></div><img data-echo="./static/images/button.png">
                 </div>
               </figure>
@@ -128,8 +127,8 @@
         </a>
       </section>
       <section class="article" style="max-width: 650px;color:#666">
-        <p>拍賣提示：進入展品頁面，點擊「Make offer」參與競標。競標需使用 WETH，您可按提示點擊「Convert ETH」兌換。設定您希望出的價格，閱讀並勾選認同用戶協議（By checking this
-          box, I agree to OpenSea's Terms of Service），完成競標流程。您可在展品頁面的「Offer」查看競標紀錄，若您出的價格得標，即會收到通知。</p>
+        <p>拍賣提示：進入展品頁面，點擊「Place bid」參與競標。競標需使用 WETH，您可按提示點擊「Convert
+          ETH」兌換，設定您希望出的價格。根據頁面提示完成競標流程，您可在展品頁面的「Offer」查看競標紀錄，若您出的價格得標，即會收到通知。</p>
       </section>
       <section class="album">
         <ul>
